--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "formik": "^2.2.9",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "react-toastify": "^9.1.1",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   }
 }
