--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.7",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"axios": "^1.6.2",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
+		"js-cookie": "^3.0.5",
 		"next": "13.4.19",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
