--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"eslint-config-next": "13.4.19",
 		"js-cookie": "^3.0.5",
 		"next": "13.4.19",
+		"next-cors": "^1.0.0",
+		"nextjs-cors": "^2.1.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
