--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cookie": "^0.6.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
+		"js-cookie": "^3.0.5",
 		"next": "13.4.19",
 		"nextjs-cors": "^2.1.2",
 		"react": "18.2.0",
