--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"axios": "^1.6.2",
-		"cookie": "^0.6.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
 		"js-cookie": "^3.0.5",
 		"next": "13.4.19",
-		"nextjs-cors": "^2.1.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
+		"react-quill": "^2.0.0",
 		"react-redux": "^8.1.3",
 		"typescript": "5.2.2"
 	}
