--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"axios": "^1.6.2",
+		"cookie": "^0.6.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
 		"js-cookie": "^3.0.5",
